--- a/tz.html
+++ b/tz.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="main">
-        <a href="http://main.tuiguang2024.com/?AgentId=12041475"><img src="red.png" alt=""></a>
+        <a href="https://main.tuiguang2002.com/?icode=105544"><img src="red.png" alt=""></a>
     </div>
     <script>
         'use strict';
