--- a/tz.html
+++ b/tz.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>四方棋牌,送38元（新用户专享）</title>
+	<title>正版荣耀棋牌,注册送18元彩金</title>
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<script src="js/jquery.js"></script>
@@ -17,7 +17,7 @@
 
 <body>
     <div class="main">
-        <a href="https://main.tuiguang2002.com/?icode=105544"><img src="red.png" alt=""></a>
+        <a href="http://main.tuiguang2024.com/?AgentId=12041475"><img src="red.png" alt=""></a>
     </div>
     <script>
         'use strict';
