--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <script>
-  window.location.href="https://1688393.com/#/register?inviteCode=5955927"
+  window.location.href="https://dl.dblgame.fun/?parent=10879511&l="
 </script>
+
+
