--- a/ccl.html
+++ b/ccl.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://www.dafaqieweb2.com/?AgentId=120784181585980099"
+  window.location.href="https://main.RY872.com/?AgentId=120784181585980099"
 </script>
