--- a/12087791.html
+++ b/12087791.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.RY803.com/?AgentId=12087791"
+  window.location.href="https://dl.hawcyy.com/?parent=119220&t=1592648471"
 </script>
