--- a/379873.html
+++ b/379873.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=379873&t=1592620274"
+  window.location.href="http://www.baidu.com"
 </script>
