--- a/379873.html
+++ b/379873.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="http://www.baidu.com"
+  window.location.href="https://jingyan.baidu.com/article/0bc808fc16937f1bd585b953.html"
 </script>
